Resolves: fdo#47432 Improve the "faux bold" in cairo canvas

The "faux bold" make the bold font in Asian ugly & unacceptable,
Adjust & improve the "faux bold" to make the bold font better.

Change-Id: I2e02156ffc30629476b80134ffb0b50e793f7ead